# roco2_kernels

./: .gitmodules  CMakeLists.txt  README.md
experiments/: README.md
experiments/scaling/: README.md  generate_env.sh  graphics.R  otf2-to-values.py
experiments/scaling/envs/: 00.env  01.env  02.env  03.env  04.env  05.env  06.env  07.env  08.env  09.env  10.env  11.env
experiments/scaling/site_defaults/: .gitignore  example.sh
experiments/scaling/template/: run.sh
include/roco2_kernels/: addpd.hpp  asm_kernels.hpp  base_kernel.hpp  busy_wait.hpp  compute.hpp  firestarter.hpp  gpu.hpp  idle.hpp  matmul.hpp  memory_copy.hpp  memory_read.hpp  memory_write.hpp  mulpd.hpp  runner.hpp  sinus.hpp  sqrt.hpp
src/: frequency_sweeper.cpp  kernel_runner.cpp  roco2.cu
src/lib/: asm_kernels_aarch64.cpp  asm_kernels_x86.cpp  kernel.cpp
src/tools/: kernel_list.cpp
